Change reset from F2 to ESC in UI

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<div class="col-md-2">
 							<div class="form-btn">
 								<span class="form-label"></span>
-								<button class="reset-btn" onclick="resetForm()">Reset (F2)</button>
+								<button class="reset-btn" onclick="resetForm()">Reset (ECS)</button>
 							</div>
 						</div>
 						<div class="col-md-2">
